# prod_test

./: Dockerfile  pyproject.toml
mysite/: db.sqlite3
mysite/mysite/: settings.py
