[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["nadejda <nadbarin@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
django-rest-framework = "^0.1.0"
djangorestframework = "3.14.0"
asgiref = "3.6.0"
django-debug-toolbar = "4.0.0"
django-filter = "22.1"
pytz = "2022.7.1"
sqlparse = "0.4.2"
pillow = "10.4.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
